[gd_scene load_steps=6 format=3 uid="uid://s802rjhrtym5"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_1cmaj"]
[ext_resource type="Texture2D" uid="uid://p8d6stapbl5u" path="res://assets/backgrounds/menu/how_to_play.jpg" id="2_yku5r"]
[ext_resource type="Texture2D" uid="uid://cxj26jq81603q" path="res://assets/backgrounds/menu/how_to_play_1.png" id="3_blimm"]
[ext_resource type="Texture2D" uid="uid://jvk5w7cem5bl" path="res://assets/backgrounds/menu/how_to_play_2.png" id="4_6unqm"]
[ext_resource type="Texture2D" uid="uid://d2fnbxjcvqicj" path="res://assets/backgrounds/menu/how_to_play_3.png" id="5_fxux8"]

[node name="HowToPlayMenu (Control)" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1cmaj")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("2_yku5r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 866.0
offset_top = 780.0
offset_right = 1066.0
offset_bottom = 920.0

[node name="ReturnToMainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[node name="Panel - 1" type="Panel" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 200.0
offset_right = 575.0
offset_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel - 1"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 180.0
offset_bottom = 42.0
text = "How to Play"

[node name="TextEdit" type="TextEdit" parent="Panel - 1"]
layout_mode = 0
offset_left = 12.0
offset_top = 318.0
offset_right = 388.07
offset_bottom = 388.0
text = "In EcoSphere, you are the warden working to restore the balance of nature. "
wrap_mode = 1

[node name="TextureRect" type="TextureRect" parent="Panel - 1"]
layout_mode = 0
offset_left = 31.0
offset_top = 80.0
offset_right = 627.0
offset_bottom = 423.0
scale = Vector2(0.557674, 0.565528)
texture = ExtResource("3_blimm")

[node name="Panel - 2" type="Panel" parent="."]
layout_mode = 0
offset_left = 775.0
offset_top = 200.0
offset_right = 1175.0
offset_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel - 2"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 180.0
offset_bottom = 42.0
text = "How to Play"

[node name="TextEdit" type="TextEdit" parent="Panel - 2"]
layout_mode = 0
offset_left = 12.0
offset_top = 318.0
offset_right = 388.07
offset_bottom = 388.0
text = "Your job is to send water droplets to the seeds to grow trees to heal the world."
wrap_mode = 1

[node name="TextureRect" type="TextureRect" parent="Panel - 2"]
layout_mode = 0
offset_left = 66.0
offset_top = 72.0
offset_right = 662.0
offset_bottom = 415.0
scale = Vector2(0.432496, 0.665224)
texture = ExtResource("4_6unqm")

[node name="Panel - 3" type="Panel" parent="."]
layout_mode = 0
offset_left = 1375.0
offset_top = 200.0
offset_right = 1775.0
offset_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel - 3"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 180.0
offset_bottom = 42.0
text = "How to Play"

[node name="TextEdit" type="TextEdit" parent="Panel - 3"]
layout_mode = 0
offset_left = 12.0
offset_top = 318.0
offset_right = 388.07
offset_bottom = 388.0
text = "The trees will transform the level, and you'll earn acorns to power up your water drops."
wrap_mode = 1

[node name="TextureRect" type="TextureRect" parent="Panel - 3"]
layout_mode = 0
offset_left = 59.0
offset_top = 59.0
offset_right = 655.0
offset_bottom = 402.0
scale = Vector2(0.438816, 0.672339)
texture = ExtResource("5_fxux8")
