[gd_scene load_steps=3 format=3 uid="uid://c2ck7kskx02j"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_gd0xo"]
[ext_resource type="Texture2D" uid="uid://by2xpl1dcuy6i" path="res://assets/backgrounds/menu/main_menu.jpg" id="2_p5jmy"]

[node name="MainMenu (Control)" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gd0xo")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("2_p5jmy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 791.0
offset_top = 600.0
offset_right = 1198.0
offset_bottom = 800.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
text = "EcoSphere Cascade"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="UpgradesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
